Analisis_Sentimen_Inflasi.ipynb

--- a/Analisis_Sentimen_Inflasi.ipynb
+++ b/Analisis_Sentimen_Inflasi.ipynb
@@ -48,7 +48,7 @@
       "source": [
         "# Twitter Auth Token\n",
         "\n",
-        "twitter_auth_token = '045fdde5d90c4c0c261459951c604b3ccd63386d'"
+        "twitter_auth_token = '045xxxxxxxxxxxxxxxxx'"
       ],
       "metadata": {
         "id": "bT2iV8y4G1iU"
